8218543: ThreadsList handling during error reporting can crash

Reviewed-by: dcubed, dholmes